bdr.BDR.scala.error
Compilation error:
BDR:2: error: ')' expected but ',' found.
if (isOverMessage()=="R","L","I","A","B","C","Z","Y","X"){
                        ^BDR:39: error: illegal start of simple expression
	}
        ^